project/test_file.txt

ali aslani
  File "test2.py", line 1
    print(ali aslani')
              ^
SyntaxError: invalid syntax
